--- a/resume.html
+++ b/resume.html
@@ -4,3 +4,53 @@
   <meta charset="utf-8">  
   <title>Project 1</title>
 </head>
+
+<body>
+  <header>
+    <nav>
+      <ul>
+        <li><a href="index.html" title="Introduction">Introduction</a></li>
+        <li><a href="resume.html" title="Resume">Resume</a></li>
+        <li><a href="video_profile.html" title="Music">Music</a></li>
+      </ul>
+      </nav>
+  </header>
+  
+  <main>
+    <h1>Resume</h1>
+	  
+	  <div>
+	    <h2>Carlos Amaya</h2>
+		
+		<div><label>(432)765-1098</label></div>
+		<div><label>camaya@hawk.iit.edu</label></div>
+	  </div>
+	  
+	  <div>
+	    <h3>Education</h3>
+		<ul>
+		  <li>Went to ITW David Speer Academy</li>
+          <li>GPA:3.9/4.0</li>
+          <li>Took Ap and Honors classes through out multiple semsters</li>
+         </ul>
+	  </div>
+	  
+	  <div>
+	    <h4>Skills</h4>
+		<ul>
+          <li><strong>Good comunication skills</strong></li>
+          <li><strong>Organized</strong></li>
+          <li><strong>Basic coding experience in java, python, and Golang</strong></li>
+		  <li><strong>Fast learner</strong></li>
+		  <li><strong>Good Managment skills</strong></li>
+        </ul>
+	  </div>
+	  
+	  <div>
+	    <h5>Work Experience</h5>
+		<ul>
+          <li>Working currently in retail as a cahsier</li>
+          <li>Worked with a tech company, <strong>LYLA</strong>, designing and testing an app</li>
+        </ul>
+	  </div>
+		
