--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <ul>
         <li><a href="index.html" title="Introduction">Introduction</a></li>
         <li><a href="resume.html" title="Resume">Resume</a></li>
-        <li><a href="video_profile.html" title="Music">Music</a></li>
+        <li><a href="drawings.html" title="Music">Drawings</a></li>
       </ul>
       </nav>
   </header>
