--- a/drawings.html
+++ b/drawings.html
@@ -15,3 +15,12 @@
       </ul>
       </nav>
   </header>
+  
+  <main>
+    <h1>Drawings</h1>
+	
+	<p>Drawing is one of my favorite ways to pass the time. Most of my insperation comes from anime.
+	  Here are some of my personal favorite drawings that I have drawn.
+	</p>
+  
+  </main>
