--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 	  <h1>Introduction</h1>
 		<div>
 		  <p>Hello my name is Carlos and this is my page.<p>
+		  <p>I am a very calm and friendly person, here are some things aboout myself.<p>
 		</div>
         
         <h3>About Myself</h3>
