--- a/resume.html
+++ b/resume.html
@@ -36,18 +36,19 @@
 	  </div>
 	  
 	  <div>
-	    <h4>Skills</h4>
+	    <h3>Skills</h3>
 		<ul>
           <li><strong>Good comunication skills</strong></li>
           <li><strong>Organized</strong></li>
           <li><strong>Basic coding experience in java, python, and Golang</strong></li>
 		  <li><strong>Fast learner</strong></li>
 		  <li><strong>Good Managment skills</strong></li>
+		  <li><strong>Good leadership skills</strong></li>
         </ul>
 	  </div>
 	  
 	  <div>
-	    <h5>Work Experience</h5>
+	    <h3>Work Experience</h3>
 		<ul>
           <li>Working currently in retail as a cahsier</li>
           <li>Worked with a tech company, <strong>LYLA</strong>, designing and testing an app</li>
