--- a/resume.html
+++ b/resume.html
@@ -54,4 +54,6 @@
           <li>Worked with a tech company, <strong>LYLA</strong>, designing and testing an app</li>
         </ul>
 	  </div>
+	</main>
+</body>
 		
