--- a/drawings.html
+++ b/drawings.html
@@ -22,5 +22,33 @@
 	<p>Drawing is one of my favorite ways to pass the time. Most of my insperation comes from anime.
 	  Here are some of my personal favorite drawings that I have drawn.
 	</p>
+	
+	<div>
+	  <img src="images/Akame.jpg" alt="A picture of Akame Hinowa holding a katana" width="350" height="250">
+	  <p>This drawing was inspired by the charcter Akame from the anime Akame ga kill and is one
+	     of my favorite drawings that I have made. I chose a specific scene that I liked and did
+		 my best to draw it and shade it properly.
+	  </p>
+	<div/>
+	
+	<h2>Drawing 2<h2>
+	
+	<div>
+	  <img src="images/kiyotaka.jpg" alt="A picture of Ajanokoji Kiyotaka sitting down with a white background" width="350" height="250">
+	  <p>I took insperation for this drawing from the anime classroom of the elite. The character I drew 
+	     is the main charcter Ajanokoji, he potrayed to be smart and composed which is why he is my favorite
+		 charcter of the anime. I used an image I found on google to use as refernce for his pose. 
+	  </p>
+	<div/>
+	
+	<h2>Drawing 3<h2>
+	
+	<div>
+	  <img src="images/IMG_4178.jpg" alt="A picture of Mikaela Hyakuya looking back" width="350" height="250">
+	  <p>I took insperation for this drawing from the anime classroom of the elite. The character I drew 
+	     is the main charcter Ajanokoji, he potrayed to be smart and composed which is why he is my favorite
+		 charcter of the anime. I used an image I found on google to use as refernce for his pose. 
+	  </p>
+	<div/>
   
   </main>
