--- a/drawings.html
+++ b/drawings.html
@@ -45,9 +45,9 @@
 	
 	<div>
 	  <img src="images/IMG_4178.jpg" alt="A picture of Mikaela Hyakuya looking back" width="350" height="250">
-	  <p>I took insperation for this drawing from the anime classroom of the elite. The character I drew 
-	     is the main charcter Ajanokoji, he potrayed to be smart and composed which is why he is my favorite
-		 charcter of the anime. I used an image I found on google to use as refernce for his pose. 
+	  <p>This drawing is from the anime Sephra of the end anime and the character that I drew
+		 Mikaela. The anime is about vampires and this charcter was turned into a vampire, and is one of my 
+		 favorite charcters in the show. 
 	  </p>
 	<div/>
   
