--- a/drawings.html
+++ b/drawings.html
@@ -19,29 +19,29 @@
   <main>
     <h1>Drawings</h1>
 	
-	<p>Drawing is one of my favorite ways to pass the time. Most of my insperation comes from anime.
+	<p>Drawing is one of my favorite ways to pass the time. Most of my inspiration comes from anime.
 	  Here are some of my personal favorite drawings that I have drawn.
 	</p>
 	
 	<div>
 	  <img src="images/Akame.jpg" alt="A picture of Akame Hinowa holding a katana" width="350" height="250">
-	  <p>This drawing was inspired by the charcter Akame from the anime Akame ga kill and is one
+	  <p>This drawing was inspired by the character Akame from the anime Akame ga kill and is one
 	     of my favorite drawings that I have made. I chose a specific scene that I liked and did
 		 my best to draw it and shade it properly.
 	  </p>
 	<div/>
 	
-	<h2>Drawing 2<h2>
+	<h2>Drawing 2</h2>
 	
 	<div>
 	  <img src="images/kiyotaka.jpg" alt="A picture of Ajanokoji Kiyotaka sitting down with a white background" width="400" height="300">
-	  <p>I took insperation for this drawing from the anime classroom of the elite. The character I drew 
-	     is the main charcter Ajanokoji, he potrayed to be smart and composed which is why he is my favorite
-		 charcter of the anime. I used an image I found on google to use as refernce for his pose. 
+	  <p>I took inspiration for this drawing from the anime classroom of the elite. The character I drew 
+	     is the main character Ajanokoji, he portrayed to be smart and composed which is why he is my favorite
+		 charcter of the anime. I used an image I found on google to use as reference for his pose. 
 	  </p>
 	<div/>
 	
-	<h3>Drawing 3<h3>
+	<h3>Drawing 3</h3>
 	
 	<div>
 	  <img src="images/IMG_4178.jpg" alt="A picture of Mikaela Hyakuya looking back" width="400" height="350">
@@ -49,6 +49,6 @@
 		 Mikaela. The anime is about vampires and this charcter was turned into a vampire, and is one of my 
 		 favorite charcters in the show. 
 	  </p>
-	<div/>
+	</div>
   </main>
 </body>
