--- a/drawings.html
+++ b/drawings.html
@@ -28,7 +28,7 @@
 	  <p>This drawing was inspired by the character Akame from the anime Akame ga kill and is one</p>
 	  <p>of my favorite drawings that I have made. I chose a specific scene that I liked and did</p>
 	  <p>my best to draw it and shade it properly.</p>
-	<div/>
+	</div>
 	
 	<h2>Drawing 2</h2>
 	
@@ -37,7 +37,7 @@
 	  <p>I took inspiration for this drawing from the anime classroom of the elite. The character I drew</p> 
 	  <p>is the main character Ajanokoji, he portrayed to be smart and composed which is why he is my favorite</p>
 	  <p>charcter of the anime. I used an image I found on google to use as reference for his pose.</P> 
-	<div/>
+	</div>
 	
 	<h3>Drawing 3</h3>
 	
