--- a/resume.html
+++ b/resume.html
@@ -13,44 +13,43 @@
         <li><a href="resume.html" title="Resume">Resume</a></li>
         <li><a href="drawings.html" title="Music">Drawings</a></li>
       </ul>
-      </nav>
+    </nav>
   </header>
   
   <main>
     <h1>Resume</h1>
+    
+    <div>
+      <h2>Carlos Amaya</h2>
+      <div><label>(432)765-1098</label></div>
+      <div><label>camaya@hawk.iit.edu</label></div>
+    </div>
 	  
-	  <div>
-	    <h2>Carlos Amaya</h2>
-		
-		<div><label>(432)765-1098</label></div>
-		<div><label>camaya@hawk.iit.edu</label></div>
-	  </div>
+    <div>
+      <h3>Education</h3>
+      <ul>
+        <li>Attended ITW David Speer Academy</li>
+        <li>GPA:3.9/4.0</li>
+        <li>Took AP and honors classes throughout multiple semesters.</li>
+      </ul>
+    </div>
 	  
-	  <div>
-	    <h3>Education</h3>
-		<ul>
-		  <li>Went to ITW David Speer Academy</li>
-          <li>GPA:3.9/4.0</li>
-          <li>Took Ap and Honors classes through out multiple semsters</li>
-         </ul>
-	  </div>
-	  
-	  <div>
-	    <h3>Skills</h3>
-		<ul>
-          <li><strong>Good comunication skills</strong></li>
+    <div>
+      <h3>Skills</h3>
+	<ul>
+          <li><strong>Good communication skills</strong></li>
           <li><strong>Organized</strong></li>
-          <li><strong>Basic coding experience in java, python, and Golang</strong></li>
-		  <li><strong>Fast learner</strong></li>
-		  <li><strong>Good Managment skills</strong></li>
-		  <li><strong>Good leadership skills</strong></li>
+          <li><strong>Basic coding experience in Java, Python, and Go</strong></li>
+	  <li><strong>Fast learner</strong></li>
+	  <li><strong>Good management skills</strong></li>
+	  <li><strong>Good leadership skills</strong></li>
         </ul>
 	  </div>
 	  
 	  <div>
 	    <h3>Work Experience</h3>
 		<ul>
-          <li>Working currently in retail as a cahsier</li>
+          <li>Working currently in retail as a cashier</li>
           <li>Worked with a tech company, <strong>LYLA</strong>, designing and testing an app</li>
         </ul>
 	  </div>
