--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <h1>Introduction</h1>
 	<div>
       <p>Hello my name is Carlos and this is my page.</p>
-      <p>I am a very calm and friendly person, here are some things aboout myself.</p>
+      <p>I am a very calm and friendly person, here are some things about myself.</p>
     </div>
         
     <h3>About Myself</h3>
@@ -39,16 +39,16 @@
       <img src="images/anime_drawing.jpg" alt="A portrait of Fireworks at White Sox park in the introduction page" width="350" height="250">
       <ul>
         <li>Some of my favorite hobbies are drawing, reading, playing video games, and playing soccer. </li>
-        <li>I like to draw charcters that I find intresting from animes that I have watched in the past.</li>
+        <li>I like to draw characters that I find intresting from animes that I have watched in the past.</li>
         <li>I also love spending time with friends and family.</li>
       </ul>
     </div>
         
     <h3>Education</h3>
       <ul>
-        <li>I am currently a sceond year here at IIT majoring in information technology and managment.</li>
-       <li>The high school that I attended is ITW David Speer Academy. 
-        <li>in the future I also plan on getting a minor in phycology and hope to achive something that will help people or make an impact on the world. </li>
+       <li>I am currently a second year here at IIT majoring in information technology and management.</li>
+       <li>The high school that I attended was ITW David Speer Academy. 
+       <li>in the future I also plan on getting a minor in phycology and hope to achieve something that will help people or make an impact on the world. </li>
       </ul>
   </main>
 </body>
