--- a/drawings.html
+++ b/drawings.html
@@ -22,23 +22,23 @@
       <p>Here are some of my personal favorite drawings that I have drawn.</p>
     <div>
       <img src="images/Akame.jpg" alt="A picture of Akame Hinowa holding a katana" width="350" height="250">
-      <p>This drawing was inspired by the character Akame from the anime Akame ga kill and is one</p>
+      <p>This drawing was inspired by the character Akame from the anime <em>Akame ga Kill</em> and is one</p>
       <p>of my favorite drawings that I have made. I chose a specific scene that I liked and did</p>
       <p>my best to draw it and shade it properly.</p>
     </div>
       <h2>Drawing 2</h2>
     <div>
       <img src="images/kiyotaka.jpg" alt="A picture of Ajanokoji Kiyotaka sitting down with a white background" width="400" height="300">
-      <p>I took inspiration for this drawing from the anime classroom of the elite. The character I drew</p> 
-      <p>is the main character Ajanokoji, he portrayed to be smart and composed which is why he is my favorite</p>
-      <p>charcter of the anime. I used an image I found on google to use as reference for his pose.</P> 
+      <p>I took inspiration for this drawing from the anime <em>Classroom of The Elite</em>. The character I drew</p> 
+      <p>is the main character Ayanokoji, he is portrayed to be smart and composed which is why he is my favorite</p>
+      <p>character of the anime. I used an image I found on google to use as reference for his pose.</P> 
     </div>
       <h3>Drawing 3</h3>
     <div>
       <img src="images/IMG_4178.jpg" alt="A picture of Mikaela Hyakuya looking back" width="400" height="350">
-      <p>This drawing is from the anime Sephra of the end anime and the character that I drew</p>
+      <p>This drawing is from the anime <em>Seraph of the End</em> anime and the character that I drew</p>
       <p>Mikaela. The anime is about vampires and this charcter was turned into a vampire, and is one of my</p> 
-      <p>favorite charcters in the show.</P> 
+      <p>favorite characters in the show.</P> 
     </div>
   </main>
 </body>
