--- a/drawings.html
+++ b/drawings.html
@@ -40,5 +40,11 @@
       <p>Mikaela. The anime is about vampires and this charcter was turned into a vampire, and is one of my</p> 
       <p>favorite characters in the show.</P> 
     </div>
+      <h4>Other Drawings</h4>
+    <div>
+      <img src="images/anime_drawing.jpg" alt="A of Violet Evergarden in black and white" >
+      <img src="images/zero_two.jpg" alt="A picture of zero two in color" >
+      <p>Here are two more of my favorite drawings!</p>
+    </div>
   </main>
 </body>
