--- a/drawings.html
+++ b/drawings.html
@@ -42,9 +42,8 @@
     </div>
       <h4>Other Drawings</h4>
     <div>
-      <img src="images/anime_drawing.jpg" alt="A of Violet Evergarden in black and white" >
       <img src="images/zero_two.jpg" alt="A picture of zero two in color" >
-      <p>Here are two more of my favorite drawings from the anime <em>Darling in The Franxx</em> and <em>Vviolet Evergarden</em>.</p>
+      <p>Here is another of my favorite drawings from the anime <em>Darling in The Franxx</em>.</p>
     </div>
   </main>
 </body>
