--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         
     <h3>About Myself</h3>
     <div>
-      <img src="images/flag.PNG" alt="A picture of the Real Madrid badge" width="350" height="250">
+      <img src="images/flag(1).PNG" alt="A picture of the Real Madrid badge" >
       <ul>
         <li>I was born in El Salvador than lived in Los Angeles, California for 2 years before finally moving here to Chicago.</li>
         <li>I am huge fan of soccer and my favorite team is Real Madrid.</li>
@@ -36,7 +36,7 @@
         
     <h3>Hobbies</h3>
     <div>
-      <img src="images/anime_drawing.jpg" alt="A portrait of Fireworks at White Sox park in the introduction page" width="350" height="250">
+      <img src="images/anime_drawing.jpg" alt="A portrait of Fireworks at White Sox park in the introduction page">
       <ul>
         <li>Some of my favorite hobbies are drawing, reading, playing video games, and playing soccer. </li>
         <li>I like to draw characters that I find intresting from animes that I have watched in the past.</li>
